fix: pre-new year bugfix
fixes #1204, fixes #1199

--- a/themepacks/midnight/stylesheet.css
+++ b/themepacks/midnight/stylesheet.css
@@ -118,7 +118,8 @@ center[style="background: white;border: #DEDEDE solid 1px;"],
 tr,
 td,
 th,
-#votesBalance,
+#votesBalance, 
+#news,
 .paginator a.active,
 .paginator a:hover,
 .topic-list-item,
@@ -312,6 +313,7 @@ tr.e,
 td.v,
 tr.v,
 #votesBalance,
+#news,
 .expand_button,
 #userContent blockquote,
 .tippy-box[data-theme~="vk"],
