fix: fix 500 on unauth

--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -45,7 +45,7 @@
             {include headIncludes}
         {/ifset}
     </head>
-    <body data-themepack="{$thisUser->getStyle()}">
+    <body {if isset($thisUser)}data-themepack="{$thisUser->getStyle()}"{/if}>
         <div id="sudo-banner" n:if="isset($thisUser) && $userTainted">
             <p>
                 {_you_entered_as} <b>{$thisUser->getCanonicalName()}</b>. {_please_rights}
