--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -2577,7 +2577,7 @@ a.poll-retract-vote {
     min-height: 63px;
 }
 
-.post-horizontal .upload-item .play-button, .compact_video .play-button {
+.post-horizontal .upload-item .play-button, .compact_video .play-button, .docGalleryItem .play-button {
     position: absolute;
     height: 30px;
     width: 30px;
@@ -2588,7 +2588,7 @@ a.poll-retract-vote {
     align-items: center;
 }
 
-.post-horizontal .upload-item .play-button .play-button-ico, .compact_video .play-button .play-button-ico {
+.post-horizontal .upload-item .play-button .play-button-ico, .compact_video .play-button .play-button-ico, .docGalleryItem .play-button .play-button-ico {
     background: url(/assets/packages/static/openvk/img/wall.png) no-repeat 1px 0;
     display: inline-block;
     height: 15px;
@@ -4038,6 +4038,25 @@ hr {
     /*width: 200px;*/
 }
 
+.attachments .docGalleryItem.embeddable {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*background: black;*/
+}
+
+.attachments .docGalleryItem.embeddable .docGalleryItem_gif_preview {
+    object-fit: contain;
+}
+
+.attachments .docGalleryItem.embeddable.playing .play-button, .attachments .docGalleryItem.embeddable.playing .doc_bottom_panel, .docGalleryItem .docGalleryItem_gif_preview, .attachments .docGalleryItem.embeddable.playing .docGalleryItem_main_preview {
+    display: none;
+}
+
+.attachments .docGalleryItem.embeddable.playing .docGalleryItem_gif_preview {
+    display: block;
+}
+
 .docGalleryItem img {
     width: 100%;
     height: 100%;
@@ -4223,8 +4242,8 @@ hr {
 
 .attachments .docGalleryItem {
     display: block;
-    min-width: 130px;
-    height: 150px;
+    min-width: 170px;
+    height: 170px;
     width: 50%;
     margin-bottom: 4px;
 }
