--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -55,6 +55,10 @@ h1 {
     flex-direction: row;
 }
 
+.display_flex_space_between {
+    justify-content: space-between;
+}
+
 .layout {
     width: 791px;
     margin: 0 auto;
@@ -2248,6 +2252,12 @@ table td[width="120"] {
     border-radius: 2px;
 }
 
+.mb_tab .special_counter {
+    color: #595959;
+    font-weight: bold;
+    margin: 0px 1px;
+}
+
 .mb_tab:hover {
     background: #e2e0e0;
 }
@@ -2263,6 +2273,10 @@ table td[width="120"] {
 
 .mb_tab#active a {
     color: white;
+}
+
+.mb_tab#active .special_counter {
+    color: #bdbdbd;
 }
 
 .border-block {
@@ -2560,7 +2574,7 @@ a.poll-retract-vote {
     min-height: 63px;
 }
 
-.post-horizontal .upload-item .play-button, .compact_video .play-button {
+.post-horizontal .upload-item .play-button, .compact_video .play-button, .docGalleryItem .play-button {
     position: absolute;
     height: 30px;
     width: 30px;
@@ -2571,7 +2585,7 @@ a.poll-retract-vote {
     align-items: center;
 }
 
-.post-horizontal .upload-item .play-button .play-button-ico, .compact_video .play-button .play-button-ico {
+.post-horizontal .upload-item .play-button .play-button-ico, .compact_video .play-button .play-button-ico, .docGalleryItem .play-button .play-button-ico {
     background: url(/assets/packages/static/openvk/img/wall.png) no-repeat 1px 0;
     display: inline-block;
     height: 15px;
@@ -2692,6 +2706,10 @@ a.poll-retract-vote {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+
+.ovk-photo-view .photo_viewer_wrapper.photo_viewer_wrapper_scrollable {
+    height: unset;
 }
 
 .ovk-photo-view #ovk-photo-img {
@@ -2823,7 +2841,7 @@ a.poll-retract-vote {
     height: 20px;
     background: url('/assets/packages/static/openvk/img/search_icon.png') no-repeat 3px 4px; 
     background-color: #fff; 
-    padding-left: 18px;
+    padding-left: 18px !important;
     width: 120px;
 }
 
@@ -3963,4 +3981,285 @@ hr {
     display: inline-block;
     margin-bottom: -2px;
     fill: #7d7d7d;
+}
+
+/* Documents */
+
+#docs_page_wrapper {
+    margin-left: -10px;
+    margin-top: -10px;
+    margin-bottom: -10px;
+    display: block;
+    width: 102.8%;
+}
+
+#docs_page_wrapper .docs_page_search {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 10px;
+    border-bottom: 1px solid #CCCCCC;
+    background: #F0F0F0;
+}
+
+#docs_page_wrapper .docs_page_search input[type="search"], .attachment_selector .attachment_search input {
+    height: 23px;
+    background: url('/assets/packages/static/openvk/img/search_icon.png') no-repeat 3px 5px; 
+    background-color: #fff; 
+    padding-left: 18px !important;
+}
+
+#docs_page_wrapper .docs_page_search input[type="search"], #docs_page_wrapper .docs_page_search form {
+    width: 100%;
+}
+
+#docs_page_wrapper .container_white {
+    display: flex;
+    flex-direction: column;
+    padding: 5px 10px;
+}
+
+#docs_page_wrapper .docs_page_content.docs_page_gallery .scroll_container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 10px;
+    padding: 10px 10px;
+}
+
+.docGalleryItem {
+    height: 200px;
+    cursor: pointer;
+    position: relative;
+    /*width: 200px;*/
+}
+
+.attachments .docGalleryItem.embeddable {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /*background: black;*/
+}
+
+.attachments .docGalleryItem.embeddable .docGalleryItem_gif_preview {
+    object-fit: contain;
+}
+
+.attachments .docGalleryItem.embeddable.playing .play-button, .attachments .docGalleryItem.embeddable.playing .doc_bottom_panel, .docGalleryItem .docGalleryItem_gif_preview, .attachments .docGalleryItem.embeddable.playing .docGalleryItem_main_preview {
+    display: none;
+}
+
+.attachments .docGalleryItem.embeddable.playing .docGalleryItem_gif_preview {
+    display: block;
+}
+
+.docGalleryItem img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+}
+
+.docGalleryItem .doc_bottom_panel {
+    position: absolute;
+    bottom: 0px;
+    background: rgba(1, 1, 1, 0.7);
+    padding: 6px 6px;
+    width: calc(100% - 12px);
+
+    display: grid;
+    grid-template-columns: 1fr 0fr;
+}
+
+.docGalleryItem .doc_shown_by_hover {
+    transition: all 100ms ease-in;
+    opacity: 0;
+}
+
+.docGalleryItem:hover .doc_shown_by_hover, .doc_shown_by_hover.info_shown {
+    opacity: 1;
+}
+
+.docGalleryItem .doc_bottom_panel span {
+    color: white;
+}
+
+.docGalleryItem .doc_bottom_panel .doc_bottom_panel_size {
+    max-width: 49px;
+    width: max-content;
+}
+
+.docGalleryItem .doc_top_panel {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background: rgba(1, 1, 1, 0.7);
+    padding: 6px 6px;
+
+    display: flex;
+    gap: 5px;
+}
+
+.docGalleryItem .doc_top_panel > div {
+    width: 10px;
+    height: 10px;
+    background: url('/assets/packages/static/openvk/img/docs_controls.png?v=8');
+    background-size: 57px;
+    background-position-y: -24px;
+    background-repeat: no-repeat;
+}
+
+#docs_page_wrapper select {
+    width: 150px;
+}
+
+.docListViewItem {
+    min-height: 38px;
+    display: grid;
+    grid-template-columns: 0fr 1fr 0fr;
+    gap: 10px;
+    padding: 7px 7px;
+    border-bottom: 1px solid #EDEDED;
+}
+
+.docs_page_content .docListViewItem:last-of-type {
+    border-bottom: unset !important;
+}
+
+.docListViewItem:hover, .attachButton:hover {
+    background: #f7f7f7;
+}
+
+.docListViewItem .doc_icon {
+    width: 50px;
+    height: 38px;
+    background: #E6E6E6;
+    user-select: none;
+    object-fit: cover;
+    border-radius: 2px;
+}
+
+.docListViewItem .doc_content {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1px;
+    /*gap: 5px;*/
+}
+
+.docListViewItem .doc_content b {
+    color: black;
+}
+
+.docListViewItem .doc_content .doc_content_info, .docListViewItem .doc_content span {
+    color: #6d6d6d;
+}
+
+.docListViewItem .doc_icon.no_image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2px;
+    height: 17px;
+    padding: 2px 0px;
+}
+
+.docListViewItem .doc_icon.no_image span {
+    color: #6b6b6b;
+}
+
+.docListViewItem .doc_icon img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.docListViewItem .doc_volume {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    visibility: hidden;
+}
+
+.docListViewItem .doc_volume > div {
+    width: 20px;
+    height: 20px;
+    background: url('/assets/packages/static/openvk/img/docs_controls.png?v=8');
+}
+
+.docListViewItem:hover .doc_volume {
+    visibility: visible;
+}
+
+.docListViewItem .doc_volume > div:hover {
+    cursor: pointer;
+    background-position-y: -21px;
+}
+
+.docListViewItem .doc_volume #report_icon {
+    background-position-x: -40px;
+}
+
+.docGalleryItem .doc_top_panel #report_icon {
+    background-position-x: -24px;
+}
+
+.docListViewItem .doc_volume #edit_icon {
+    background-position-x: -20px;
+}
+
+.docListViewItem .doc_volume #add_icon {
+    background-position-x: -60px;
+}
+
+.docGalleryItem .doc_top_panel #add_icon {
+    background-position-x: -35px;
+}
+
+.docGalleryItem .doc_top_panel #edit_icon {
+    background-position-x: -12px;
+}
+
+.docListViewItem .doc_volume #mark_icon {
+    background-position-x: -80px;
+}
+
+.docGalleryItem .doc_top_panel #mark_icon {
+    background-position-x: -46px;
+}
+
+.doc_viewer_wrapper {
+    overflow: hidden;
+}
+
+.attachments .docListViewItem {
+    min-height: 30px;
+    border-bottom: unset;
+}
+
+.attachments .docGalleryItem {
+    display: block;
+    min-width: 170px;
+    height: 170px;
+    width: 50%;
+    margin-bottom: 4px;
+}
+
+.attachButton {
+    width: 12%;
+    height: 55px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    user-select: none;
+}
+
+.attachment_selector .attachment_search {
+    margin: 6px 0px;
+}
+
+.attachment_selector .attachment_search input {
+    height: 30px;
+    background-position-y: 9px;
 }
