--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -4173,6 +4173,16 @@ hr {
     color: #6b6b6b;
 }
 
+.doc_icon.no_image span::before {
+  content: '';
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAKCAYAAABmBXS+AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAABYSURBVChTY2RAAvNnzmwBUtVA3JqYnl4DFgQCJigNAyAFyDQYoCvCCohSxAh0x38oGydANwmmAUUjE9AXKD5EByB5uAIka0E0WBxmAHo4wa3BawOmRxgYAOA2GQMa5cgCAAAAAElFTkSuQmCC");
+  transform: translateY(2px) translateX(-3px);
+  background-repeat: no-repeat;
+}
+
 .docListViewItem .doc_icon img {
     width: 100%;
     height: 100%;
