--- a/Web/static/css/dialog.css
+++ b/Web/static/css/dialog.css
@@ -38,7 +38,6 @@ body.dimmed > .dimmer #absolute_territory {
 }
 
 .ovk-diag-head {
-    height: 25%;
     padding: 5px;
     background-color: #757575;
     border-bottom: 1px solid #3e3e3e;
@@ -49,11 +48,12 @@ body.dimmed > .dimmer #absolute_territory {
 
 .ovk-diag-body {
     padding: 20px;
+    overflow-y: auto;
+    max-height: 80vh
 }
 
 .ovk-diag-action {
     padding: 10px;
-    height: 25%;
     background-color: #d4d4d4;
     text-align: right;
 }
