--- a/Web/static/css/audios.css
+++ b/Web/static/css/audios.css
@@ -52,6 +52,35 @@
     height: 46px;
 }
 
+/* кто прочитал тому не завидую */
+.bigPlayer .bigPlayerWrapper .absoluteButtons {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.bigPlayer .bigPlayerWrapper .absoluteButtons > div {
+    width: 8px;
+    height: 8px;
+    font-size: 9px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #ebebeb;
+    border: 1px solid #c3c3c3;
+    border-bottom: unset;
+    border-right: unset;
+    color: #c3c3c3;
+    cursor: pointer;
+    user-select: none;
+}
+
+.bigPlayer .bigPlayerWrapper .absoluteButtons > div:active {
+    background: #c3c3c3;
+    color: #ebebeb;
+}
+
 /* Play button and arrows */
 .bigPlayer .playButtons {
     display: flex;
@@ -313,7 +342,7 @@
     opacity: 0.8;
 }
 
-.audioEmbed.processed {
+.audioEmbed.processed .playerButton {
     filter: opacity(0.6);
 }
 
