fix(audio, favorites): big patch #1259
# Аудио
- Добавлена вкладка в аудио "загруженное" которую я забыл добавить в
октябре 2023. Она показывает загруженные аудио в порядке возрастания.
Есть так же идеи для вкладок "недавно прослушанное" и "ваши друзья
слушают" (последняя добавит иммерсивности, или как это называется,
персональности на сайт, хотя по факту она просто соберёт id всех друзей
и выдаст их недавние добавления в коллекцию), но тогда будет
нагромождение вкладок и придётся какое то сворачивание добавлять.
- Если аудио больше 10 и ты на странице аудио, то показывается мелкая
кнопка в правом нижнем углу которая развернёт счётчик и пагинатор.
- Если аудио обрабатывается (processed как я назвал в css) то появится
кнопка "всё равно хочу воспроизвести".
- При переключении трека меняется заголовок вкладки
- Если ты вызвал контекстное меню но оно ушло за экран, то оно будет
повыше.

# Уязвимости
- Убрана уязвимость в audio api что можно было посмотреть айди владельца
удалённого аудио. В целом непонятно использование id в тексте ошибки,
поскольку он не должен изменятся и быть обобщённым, по типу access to
audio denied. Но да ладно, коду три года всё таки.
- Удалённый контент заменяется "[deleted]" в /fave. Я бы на самом деле
не добавлял это, но меня испугал последний абзац fixed #1258 поэтому
добавил.

--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -3039,6 +3039,10 @@ a.poll-retract-vote {
     gap: 1px;
 }
 
+.verticalGrayTabsPad {
+    padding: 0px 0px 0px 8px;
+}
+
 .searchList hr, .verticalGrayTabs hr {
     width: 153px;
     margin-left: 0px;
@@ -4277,4 +4281,8 @@ hr {
 .attachment_selector .attachment_search input {
     height: 30px;
     background-position-y: 9px;
+}
+
+.deleted_mark_average {
+    padding: 5px 61px;
 }
