fix(bsdn): fix play button dynamic width

--- a/Web/static/css/bsdn.css
+++ b/Web/static/css/bsdn.css
@@ -99,6 +99,7 @@ button.bsdn_playButton {
     padding-left: 0;
     font-size: 22px;
     cursor: pointer;
+    width: 22px;
 }
 
 .bsdn_fullScreenButton, .bsdn_repeatButton {
