--- a/themepacks/midnight/stylesheet.css
+++ b/themepacks/midnight/stylesheet.css
@@ -670,3 +670,7 @@ ul {
     background: #1e1a2b;
     border: 1px solid #403a56;
 }
+
+.ovk-modal-player-window #ovk-player-info {
+    background: #0e0b1a;
+}
