--- a/Web/static/css/microblog.css
+++ b/Web/static/css/microblog.css
@@ -93,8 +93,12 @@
     overflow: auto;
     background: url("/assets/packages/static/openvk/img/audios_controls.png") no-repeat 0 0;
     background-position: -51px -67px;
-    opacity: 0.2;
+    opacity: 0.1;
     transition-duration: 0.3s;
+}
+
+.ignore:hover {
+    opacity: 0.4;
 }
 
 .post-author .delete {
