feat(FeedReports): Report button with icon added to microblog

--- a/Web/static/css/microblog.css
+++ b/Web/static/css/microblog.css
@@ -86,6 +86,20 @@
     background-color: rgb(240, 240, 240);
 }
 
+.report {
+    float: right;
+    height: 16px;
+    width: 16px;
+    overflow: auto;
+    background: url("/assets/packages/static/openvk/img/report.png") no-repeat 0 0;
+    opacity: 0.1;
+    transition-duration: 0.3s;
+}
+
+.report:hover {
+    opacity: 0.4;
+}
+
 .post-author .delete {
     float: right;
     height: 16px;
