--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -880,7 +880,7 @@ h4 {
 }
 
 .post-geo {
-    margin: 1px 0px;
+    margin: 8px 0px 2px -3px;
     padding: 0 4px;
 }
 
@@ -1568,6 +1568,10 @@ body.scrolled .toTop:hover, .toTop.has_down:hover {
     margin-top: 11px;
     margin-left: 3px;
     color: #3c3c3c;
+}
+
+.post-has-geo.appended-geo {
+    padding: 6px 0px;
 }
 
 .post-source #remove_source_button, #small_remove_button {
@@ -2670,7 +2674,8 @@ a.poll-retract-vote {
 }
 
 .post-buttons .vertical-attachment .vertical-attachment-content { 
-    max-height: 27px;
+    /*max-height: 27px;*/
+    padding: 3px 2px;
 }
 
 .vertical-attachment .vertical-attachment-content .overflowedName {
@@ -3201,6 +3206,11 @@ a.poll-retract-vote {
     display: flex;
     align-items: center;
     gap: 1px;
+    padding: 5px 9px;
+}
+
+.post-buttons .attachment_note {
+    padding: 3px 0px;
 }
 
 .attachment_note svg {
@@ -4274,8 +4284,8 @@ hr {
 .attachments .docGalleryItem {
     display: block;
     min-width: 170px;
-    height: 170px;
-    width: 50%;
+    min-height: 170px;
+    width: 83%;
     margin-bottom: 4px;
 }
 
