fix: source window paddings

--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -3393,6 +3393,7 @@ body.article .floating_sidebar, body.article .page_content {
     display: flex;
     flex-direction: column;
     gap: 22px;
+    padding: 5px 10px;
 }
 
 .sugglist {
