модалка фото закрывается по нажатию на оверлей

--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -2698,6 +2698,15 @@ a.poll-retract-vote {
     z-index: 300;
 }
 
+.ovk-photo-view-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+}
+
 .ovk-photo-view {
     position: relative;
     z-index: 999;
